# mv-libglade-test

./: .gitignore  AUTHORS  ChangeLog  NEWS  README  THANKS  configure.ac
src/: Makefile.am  callbacks.c  callbacks.h  libgladeTest.gladep  main.c
